# face-recognition-door-lock

./: .gitignore  CHANGES.md  Project_start.ps1  QUICK_START.md  README.md  README_SETUP.md
BRAIN_Module/: smart_lock_db.sql
BRAIN_Module/smartlock-server/: pom.xml
BRAIN_Module/smartlock-server/src/main/java/com/huy/smartlock_server/: DetectionRequest.java  LockController.java  SmartlockServerApplication.java  User.java  UserRepository.java
BRAIN_Module/smartlock-server/src/main/java/com/huy/smartlock_server/config/: SecurityConfig.java
BRAIN_Module/smartlock-server/src/main/java/com/huy/smartlock_server/controller/: CameraController.java  LockController.java  LogController.java  UserController.java
BRAIN_Module/smartlock-server/src/main/java/com/huy/smartlock_server/dto/: DetectionRequest.java  UnlockRequestDto.java
BRAIN_Module/smartlock-server/src/main/java/com/huy/smartlock_server/entity/: AccessLog.java  (+2 more)
BRAIN_Module/smartlock-server/src/main/resources/: application.properties
BRAIN_Module/smartlock-server/src/main/resources/static/: index.html  login.html
BRAIN_Module/smartlock-server/src/test/java/com/huy/smartlock_server/: SmartlockServerApplicationTests.java
EYES-Module/FaceDetection/: CMakeLists.txt  FaceDetec.cpp  FaceDetection.sln  FaceDetection.vcxproj  FaceDetection.vcxproj.filters  main.cpp
EYES-Module/FaceDetection/include/: ApiClient.h  DataCollector.h  FaceDetector.h  FaceTrainer.h
EYES-Module/FaceDetection/src/: ApiClient.cpp  DataCollector.cpp  FaceDetector.cpp  FaceTrainer.cpp
HAND_Module/sketch_apr30a/: sketch_apr30a.ino
(+6 files in other folders)
